UI and flow enhancement

--- a/www/templates/reservation/list.html
+++ b/www/templates/reservation/list.html
@@ -1,9 +1,9 @@
 <ion-view>
-	<ion-header-bar class="item-input-inset" align-title="left">
+	<ion-nav-buttons side="left">
 	    <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
         <h1 class='title'>Reservation</h1>
-	</ion-header-bar>
+	</ion-nav-buttons>
 	
 	<ion-content>
 		<label class="item item-input">
