--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,5 +1,8 @@
 <ion-side-menus enable-menu-with-back-views="true">
   <ion-side-menu-content>
+  	<ion-nav-bar class="bar-stable nav-title-slide-ios7">
+      <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i> Back</ion-nav-back-button>
+    </ion-nav-bar>
   	<ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
@@ -9,13 +12,13 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item nav-clear menu-close href="#/file/resource">
+        <ion-item nav-clear menu-close href="#/resource">
           Resource
         </ion-item>
-        <ion-item nav-clear menu-close href="#/file/reservation">
+        <ion-item nav-clear menu-close href="#/reservation">
           Reservation
         </ion-item>
-        <ion-item nav-clear menu-close href="#/file/myreservation">
+        <ion-item nav-clear menu-close href="#/myreservation">
           My Reservation
         </ion-item>
         <ion-item nav-clear menu-close ng-if="env.isNative()" ng-click="navigator.app.exitApp()">
