--- a/www/templates/reservation/mylist.html
+++ b/www/templates/reservation/mylist.html
@@ -1,10 +1,12 @@
 <ion-view>
-	<ion-header-bar class="item-input-inset" align-title="left">
+	<ion-nav-buttons side="left">
 	    <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
         <h1 class='title'>My Reservation</h1>
-        <button class="button button-clear button-positive" ng-controller="ReservationCtrl" ng-click="controller.input()">New</button>
-	</ion-header-bar>
+        <div class="buttons">
+        <a class="button icon-right ion-plus-round" href="#/reservation/select"></a>
+        </div>	
+	</ion-nav-buttons>
 	<ion-content>
 			<ion-item>
 				<div class='row'>
