--- a/www/templates/reservation/select.html
+++ b/www/templates/reservation/select.html
@@ -1,9 +1,8 @@
-<ion-modal-view>
-  <ion-header-bar>
-  	<button class="button button-clear button-positive" ng-click="controller.ok()">OK</button>
-    <h1 class="title">Select</h1>
-    <button class="button button-clear" ng-click="controller.cancel()">Cancel</button>
-  </ion-header-bar>
+<ion-view>
+  <ion-nav-buttons side="left">
+	<h1 class="title">Select</h1>
+	<button class="button button-clear button-positive" ng-click="controller.ok()">OK</button>
+  </ion-nav-buttons>
   <ion-content padding="true">
   	<label class="item item-input">
 	  <span class="input-label">Resource</span>
@@ -26,4 +25,4 @@
 	  <input type="text" ng-model="model.purpose">
 	</label>
   </ion-content>
-</ion-modal-view>
+</ion-view>
