--- a/www/templates/reservation/mylist.html
+++ b/www/templates/reservation/mylist.html
@@ -4,7 +4,7 @@
         </button>
         <h1 class='title'>My Reservation</h1>
         <div class="buttons">
-        <a class="button icon-right ion-plus-round" href="#/reservation/select"></a>
+        	<button class="button icon-right ion-plus-round" on-tap="controller.create();"></button>
         </div>	
 	</ion-nav-buttons>
 	<ion-content>
