--- a/www/templates/resource/list.html
+++ b/www/templates/resource/list.html
@@ -2,6 +2,9 @@
 	<ion-nav-buttons side="left">
       <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
       <h1 class='title'>Resource</h1>
+      <div class="buttons">
+        <button class="button icon-right ion-plus-round" on-tap="controller.create();"></button>
+      </div>	
     </ion-nav-buttons>
 	<ion-content>
 		<ion-list>
