--- a/www/templates/resource/select.html
+++ b/www/templates/resource/select.html
@@ -1,9 +1,8 @@
-<ion-modal-view>
-  <ion-header-bar>
-  	<button class="button button-clear button-positive" ng-click="controller.ok()">OK</button>
-    <h1 class="title">Select</h1>
-    <button class="button button-clear" ng-click="controller.cancel()">Cancel</button>
-  </ion-header-bar>
+<ion-view>
+  <ion-nav-buttons side="left">
+  	<h1 class="title">Select</h1>
+	<button class="button button-clear button-positive" ng-click="controller.ok()">OK</button>
+  </ion-nav-buttons>
   <ion-content padding="true">
   	<ion-item>
 		<div class="list">
@@ -14,4 +13,4 @@
 		</div>
 	</ion-item>
   </ion-content>
-</ion-modal-view>
+</ion-view>
