Update date format to support Firefox and IE

--- a/www/templates/reservation/mylist.html
+++ b/www/templates/reservation/mylist.html
@@ -33,7 +33,7 @@
 						{{model.resource.name}} 
 					</div>
 					<div class='col-25'>
-						{{model.date | date: 'dd-MM-yyyy'}} 
+						{{model.date | date: 'dd-MMM-yyyy'}} 
 					</div>
 					<div class='col-25'>
 						{{model.time}} 
