--- a/www/templates/location/create.html
+++ b/www/templates/location/create.html
@@ -1,13 +1,13 @@
 <ion-view>
   <ion-nav-buttons side="left">
-  	<h1 class="title">Select</h1>
+  	<h1 class="title">Location</h1>
 	<button class="button button-clear button-positive" ng-click="controller.ok()">OK</button>
   </ion-nav-buttons>
   <ion-content padding="true">
   	<ion-item>
 		<div class="list">
 			<label class="item item-input">
-		    	<span class="input-label">Name</span>
+		    	<span class="input-label">Location</span>
 		    	<input type="text" ng-model="model.name">
 			</label>
 		</div>
