--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,6 +12,9 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
+      	<ion-item nav-clear menu-close href="#/location">
+          Location
+        </ion-item>
         <ion-item nav-clear menu-close href="#/resource">
           Resource
         </ion-item>
