--- a/www/templates/reservation/list.html
+++ b/www/templates/reservation/list.html
@@ -26,7 +26,7 @@
 		                ng-repeat="item in group.timeslot"
 		                ng-show="isGroupShown(group)"
 		                ng-disabled="item.disabled">
-		        {{item.value}} <b>{{ item.reservedBy }}</b> <button class="button button-clear button-positive" ng-click="controller.edit(group._id, item.date, item.value)" ng-if="!item.reservedBy">Reserve</button>
+		        {{item.value}} <b>{{ item.reservedBy }}</b> <button class="button button-clear button-positive" ng-click="controller.edit(group, item.date, item.value)" ng-if="!item.reservedBy">Reserve</button>
 		      </ion-item>
 		    </div>
 		</ion-list>
