--- a/www/templates/reservation/select.html
+++ b/www/templates/reservation/select.html
@@ -1,28 +1,29 @@
-<ion-view>
-  <ion-nav-buttons side="left">
-	<h1 class="title">Select</h1>
-	<button class="button button-clear button-positive" ng-click="controller.ok()">OK</button>
-  </ion-nav-buttons>
-  <ion-content padding="true">
-  	<label class="item item-input">
-	  <span class="input-label">Resource</span>
-	  	<select ng-model="model.resource" ng-options="item._id as item.name for item in resourceList.models" ng-change="controller.getAvailableTimeslot()"><option value="">-- Please select --</option></select>
-	</label>
-	<label class="item item-input">
-	  <span class="input-label">Date</span>
-		<ionic-datepicker idate="currentDate" disablepreviousdates="true"  callback="datePickerCallback">
-		    <button class="button button-block button-positive"> {{ currentDate | date:'dd - MMMM - yyyy' }} </button>
-		</ionic-datepicker>
-	</label>
-	<label class="item item-input">
-	  <span class="input-label">Timeslot</span>
-	  	<ion-list>
-	  	<ion-radio ng-repeat="item in timeslot" ng-value="item.value" ng-model="model.time" name="timeslot" ng-disabled="item.disabled">{{ item.value }} <b>{{ item.reservedBy }}</b></ion-radio>
-	  	</ion-list>
-	</label>    
-	<label class="item item-input">
-	  <span class="input-label">Purpose</span>
-	  <input type="text" ng-model="model.purpose">
-	</label>
-  </ion-content>
-</ion-view>
+<span>
+	<a class="button icon-right ion-ios-arrow-down" ng-click="click()">
+		{{selectedTitle()}}
+	</a>
+	
+	<script id="fancy-select-object.html" type="text/ng-template">
+	    <ion-view class="fancy-select-items modal">
+	      <ion-header-bar class="bar-positive item-input-inset">
+	
+			<button ng-click="close()" class="button button-positive button-icon ion-ios-arrow-back"></button>
+	        
+	        <h1 class="title">{{title}}</h1>
+			
+	      </ion-header-bar>
+	      <ion-content>
+	        <div class="list">
+	          <!-- Single select -->
+	          <label
+	                 ng-repeat="item in model"
+	                 ng-if="!multiple"
+	                 ng-click="item.label = item.name; select(item); $emit('selectedResource',item)"
+	                 class="item item-text-wrap">
+	            {{item.name}}
+	          </label>
+	        </div>
+	      </ion-content>
+	    </ion-view>
+	</script>
+</span>
