--- a/www/templates/resource/edit.html
+++ b/www/templates/resource/edit.html
@@ -8,7 +8,7 @@
 		<span class="input-label">Name</span>
 		<input type="text" ng-model="model.name">
 	</label>
-	<div class="item item-input" ng-init="item = {label: '-- Please select location --'}">
+	<div class="item item-input" ng-init="item = model.location || {name: '-- Please select location --'}; item.label = item.name">
 	 	<span class="input-label">Location</span>
 		<fancy-select-object
 			template-url='templates/resource/select.html'
