--- a/www/templates/resource/list.html
+++ b/www/templates/resource/list.html
@@ -7,11 +7,26 @@
       </div>	
     </ion-nav-buttons>
 	<ion-content>
+		<ion-item>
+			<div class='row'>
+				<div class='col-67 col'>
+					<b>Name</b>
+				</div>
+				<div class='col-33 col'>
+					<b>Location</b> 
+				</div>
+				<ion-option-button class="button button-positive"></ion-option-button>
+				<ion-option-button class="button button-assertive"></ion-option-button>
+			</div>
+		</ion-item>	
 		<ion-list>
 			<ion-item ng-controller="ResourceCtrl" ng-repeat="model in controller.collection.models" ng-class="model.$hasChanged() ? 'dirty' : ''">				
 				<div class='row'>
-					<div class='col'>
+					<div class='col-67 col'>
 						{{model.name}}
+					</div>
+					<div class='col-33 col'>
+						{{model.location.name}}
 					</div>
 				</div>
 				<ion-option-button class="button button-positive icon-left ion-edit" on-tap="$event.stopPropagation(); controller.edit();">Edit</ion-option-button>
