Add more attributes to Resource domain. Add read action in Resource domain

--- a/www/templates/resource/edit.html
+++ b/www/templates/resource/edit.html
@@ -17,6 +17,22 @@
 			title="Select Location">
 		</fancy-select-object>
 	</div>
+	<label class="item item-input">
+		<span class="input-label">Capacity</span>
+		<input type="text" ng-model="model.capacity">
+	</label>
+	<label class="item item-input">
+		<span class="input-label">Contact No.</span>
+		<input type="text" ng-model="model.contactNo">
+	</label>
+	<label class="item item-input">
+		<span class="input-label">UC Facility</span>
+		<input type="text" ng-model="model.ucFacility">
+	</label>
+	<label class="item item-input">
+		<span class="input-label">Admin acceptance</span>
+		<input type="text" ng-model="model.adminAccept">
+	</label>	
 		
 	</ion-item>
   </ion-content>
