--- a/www/templates/resource/select.html
+++ b/www/templates/resource/select.html
@@ -3,6 +3,30 @@
 		{{selectedTitle()}}
 	</a>
 	
+	<script id="fancy-select.html" type="text/ng-template">
+	    <ion-view class="fancy-select-items modal">
+	      <ion-header-bar class="bar-positive">
+	
+			<button ng-click="close()" class="button button-positive button-icon ion-ios-arrow-back"></button>
+	        
+	        <h1 class="title">{{title}}</h1>
+			
+	      </ion-header-bar>
+	      <ion-content>
+	        <div class="list">
+	          <!-- Single select -->
+	          <label
+	                 ng-repeat="item in model"
+	                 ng-if="!multiple"
+	                 ng-click="select({label: item, selected: true}); $emit('{{title}}',item)"
+	                 class="item item-text-wrap">
+	            {{item}}
+	          </label>
+	        </div>
+	      </ion-content>
+	    </ion-view>
+	</script>
+	
 	<script id="fancy-select-object.html" type="text/ng-template">
 	    <ion-view class="fancy-select-items modal">
 	      <ion-header-bar class="bar-positive item-input-inset">
@@ -18,7 +42,7 @@
 	          <label
 	                 ng-repeat="item in model"
 	                 ng-if="!multiple"
-	                 ng-click="item.label = item.name; select(item); $emit('selectedLocation',item)"
+	                 ng-click="item.label = item.name; select(item); $emit('{{title}}',item)"
 	                 class="item item-text-wrap">
 	            {{item.name}}
 	          </label>
