Add Timeslot and Location CRUD Revise coding style

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,6 +12,9 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
+      	<ion-item nav-clear menu-close href="#/timeslot">
+          Timeslot
+        </ion-item>
       	<ion-item nav-clear menu-close href="#/location">
           Location
         </ion-item>
