--- a/www/templates/reservation/mylist.html
+++ b/www/templates/reservation/mylist.html
@@ -4,7 +4,7 @@
         </button>
         <h1 class='title'>My Reservation</h1>
         <div class="buttons">
-        	<button class="button icon-right ion-plus-round" on-tap="controller.create();"></button>
+        	<button class="button icon-right ion-plus-round" on-tap="create();"></button>
         </div>	
 	</ion-nav-buttons>
 	<ion-content>
@@ -27,7 +27,7 @@
 				<ion-option-button</ion-option-button>
 			</ion-item>	
 		<ion-list>
-			<ion-item ng-repeat="model in controller.collection.models" ng-class="model.$hasChanged() ? 'dirty' : ''">				
+			<ion-item ng-repeat="model in collection.models | orderBy: 'resource.name'" ng-class="model.$hasChanged() ? 'dirty' : ''">				
 				<div class='row'>
 					<div class='col-25'>
 						{{model.resource.name}} 
@@ -36,17 +36,16 @@
 						{{model.date | date: 'dd-MMM-yyyy'}} 
 					</div>
 					<div class='col-25'>
-						{{model.time}} 
+						{{model.time.name}} 
 					</div>
 					<div class='col-25'>
 						{{model.purpose}} 
 					</div>
 				</div>
-				<!-- <ion-option-button class="button button-positive icon-left ion-edit" on-tap="$event.stopPropagation(); controller.edit();">Edit</ion-option-button> -->
-				<ion-option-button class="button button-assertive icon-left ion-trash-b" on-tap="$event.stopPropagation(); $parent.controller.remove(model);">Delete</ion-option-button>
+				<ion-option-button class="button button-assertive icon-left ion-trash-b" on-tap="$event.stopPropagation(); delete(model)">Delete</ion-option-button>
 			</ion-item>
 		</ion-list>
-		<ion-infinite-scroll ng-if="model.state.page < model.state.total_page" on-infinite="controller.loadMore()">
+		<ion-infinite-scroll ng-if="model.state.page < model.state.total_page" on-infinite="loadMore()">
 		</ion-infinite-scroll>	
 	</ion-content>
 </ion-view>
