--- a/www/templates/reservation/list.html
+++ b/www/templates/reservation/list.html
@@ -14,7 +14,7 @@
 		</label>	
 	
 		<ion-list>
-		    <div ng-repeat="group in controller.collection.models">
+		    <div ng-repeat="group in resourceList.models">
 		      <ion-item class="item-stable"
 		                ng-click="toggleGroup(group)"
 		                ng-class="{active: isGroupShown(group)}">
@@ -23,10 +23,10 @@
 		        {{group.name}}  [<b>{{group.available}}</b> available slot(s)]
 		      </ion-item>
 		      <ion-item class="item-accordion"
-		                ng-repeat="item in group.timeslot"
+		                ng-repeat="item in group.timeslot.models"
 		                ng-show="isGroupShown(group)"
 		                ng-disabled="item.disabled">
-		        {{item.value}} <b>{{ item.reservedBy }}</b> <button class="button button-clear button-positive" ng-click="controller.edit(group, item.date, item.value)" ng-if="!item.reservedBy">Reserve</button>
+		        {{item.name}} <b>{{ item.reservedBy }}</b> <button class="button button-clear button-positive" ng-click="create(group._id, item.date, item._id)" ng-if="!item.reservedBy">Reserve</button>
 		      </ion-item>
 		    </div>
 		</ion-list>
