--- a/www/templates/resource/read.html
+++ b/www/templates/resource/read.html
@@ -1,7 +1,7 @@
 <ion-view>
   <ion-nav-buttons side="left">
   	<h1 class="title">Resource</h1>
-	<button class="button button-clear button-positive" ng-click="controller.edit()">Edit</button>
+  	<a class="button button-icon button-clear" ng-href="#/resource/edit/{{ model._id }}">Edit</a>
   </ion-nav-buttons>
   <ion-content padding="true">
 	<label class="item item-input">
@@ -28,7 +28,5 @@
 		<span class="input-label">Admin acceptance</span>
 		{{ model.adminAccept }}
 	</label>
-		
-	</ion-item>
   </ion-content>
 </ion-view>
