--- a/www/templates/timeslot/edit.html
+++ b/www/templates/timeslot/edit.html
@@ -1,12 +1,12 @@
 <ion-view>
   <ion-nav-buttons side="left">
-  	<h1 class="title">Location</h1>
+  	<h1 class="title">Timeslot</h1>
 	<button class="button button-clear button-positive" ng-click="save()">OK</button>
   </ion-nav-buttons>
   <ion-content padding="true">
 	<div class="list">
 		<label class="item item-input">
-	    	<span class="input-label">Location</span>
+	    	<span class="input-label">Timeslot</span>
 	    	<input type="text" ng-model="model.name">
 		</label>
 	</div>
