--- a/www/templates/timeslot/list.html
+++ b/www/templates/timeslot/list.html
@@ -1,32 +1,17 @@
 <ion-view>
 	<ion-nav-buttons side="left">
       <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-      <h1 class='title'>Resource</h1>
+      <h1 class='title'>Timeslot</h1>
       <div class="buttons">
         <button class="button icon-right ion-plus-round" on-tap="$event.stopPropagation(); create()"></button>
       </div>	
     </ion-nav-buttons>
 	<ion-content>
-		<ion-item>
-			<div class='row'>
-				<div class='col-67 col'>
-					<b>Name</b>
-				</div>
-				<div class='col-33 col'>
-					<b>Location</b> 
-				</div>
-				<ion-option-button class="button button-positive"></ion-option-button>
-				<ion-option-button class="button button-assertive"></ion-option-button>
-			</div>
-		</ion-item>	
 		<ion-list>
-			<ion-item ng-repeat="model in collection.models" ng-class="model.$hasChanged() ? 'dirty' : ''" on-tap="$event.stopPropagation(); read('{{model._id}}');">				
+			<ion-item ng-repeat="model in collection.models" ng-class="model.$hasChanged() ? 'dirty' : ''">				
 				<div class='row'>
-					<div class='col-67 col'>
+					<div class='col'>
 						{{model.name}}
-					</div>
-					<div class='col-33 col'>
-						{{model.location.name}}
 					</div>
 				</div>
 				<ion-option-button class="button button-positive icon-left ion-edit" on-tap="$event.stopPropagation(); edit('{{model._id}}')">Edit</ion-option-button>
