Add search filter in Reservation list

--- a/www/templates/reservation/create.html
+++ b/www/templates/reservation/create.html
@@ -15,8 +15,8 @@
 	</div>
 	<label class="item item-input">
 	  <span class="input-label">Date</span>
-		<ionic-datepicker idate="currentDate" disablepreviousdates="true"  callback="datePickerCallback">
-		    <button class="button button-block button-positive"> {{ currentDate | date:'dd - MMMM - yyyy' }} </button>
+		<ionic-datepicker input-obj="datepickerObject">
+		  <button class="button button-block button-positive"> {{datepickerObject.inputDate | date:'dd - MMMM - yyyy'}}</button>
 		</ionic-datepicker>
 	</label>
 	<label class="item item-input">
