Filter resource selection list according to selected location option

--- a/www/templates/reservation/list.html
+++ b/www/templates/reservation/list.html
@@ -20,7 +20,7 @@
 				</fancy-select-object>
 			</div>
 			<div class="col-60 col" ng-init="item2 = selectResourceList[0]; item2.label = item2.name">
-				<fancy-select-object
+				<fancy-select-object id='selectResource'
 					template-url='templates/reservation/select.html'
 					ng-selected="item2"
 					ng-model="selectResourceList"
