--- a/www/templates/reservation/create.html
+++ b/www/templates/reservation/create.html
@@ -1,6 +1,6 @@
 <ion-view>
   <ion-nav-buttons side="left">
-	<h1 class="title">Select</h1>
+	<h1 class="title">Reservation</h1>
 	<button class="button button-clear button-positive" ng-click="save()">OK</button>
   </ion-nav-buttons>
   <ion-content padding="true">
