--- a/www/templates/resource/read.html
+++ b/www/templates/resource/read.html
@@ -28,5 +28,9 @@
 		<span class="input-label">Admin acceptance</span>
 		{{ model.adminAccept }}
 	</label>
+	<label class="item item-input">
+		<span class="input-label">Owner</span>
+		{{ model.createdBy.username }}
+	</label>
   </ion-content>
 </ion-view>
