--- a/www/templates/reservation/edit.html
+++ b/www/templates/reservation/edit.html
@@ -1,6 +1,6 @@
 <ion-modal-view>
-  <ion-header-bar>
-    <button class="button button-clear" ng-click="close()">Close</button>    
+  <ion-header-bar class="bar-positive">
+    <button class="button button-clear icon-left ion-close-round" ng-click="close()"></button>    
     <h1 class="title">Edit Reservation</h1>
     <button class="button button-clear button-positive" ng-click="save()">OK</button>
   </ion-header-bar>
