--- a/www/templates/resource/modal.html
+++ b/www/templates/resource/modal.html
@@ -1,8 +1,8 @@
-<ion-view>
-  <ion-nav-buttons side="left">
-  	<h1 class="title">Resource</h1>
-  	<a class="button button-icon button-clear" ng-href="#/resource/edit/{{ model._id }}">Edit</a>
-  </ion-nav-buttons>
+<ion-modal-view>
+  <ion-header-bar class="bar-positive">
+    <button class="button button-clear icon-left ion-close-round" ng-click="close()"></button>    
+    <h1 class="title">Resource</h1>
+  </ion-header-bar>
   <ion-content padding="true">
 	<label class="item item-input">
 		<span class="input-label">Name</span>
@@ -33,4 +33,4 @@
 		{{ model.createdBy.username }}
 	</label>
   </ion-content>
-</ion-view>
+</ion-modal-view>
