Update button to icon

--- a/www/templates/reservation/edit.html
+++ b/www/templates/reservation/edit.html
@@ -2,7 +2,7 @@
   <ion-header-bar class="bar-positive">
     <button class="button button-clear icon-left ion-close-round" ng-click="close()"></button>    
     <h1 class="title">Edit Reservation</h1>
-    <button class="button button-clear button-positive" ng-click="save()">OK</button>
+    <button class="button button-clear icon-right ion-checkmark-round" ng-click="save()"></button>
   </ion-header-bar>
   <ion-content padding="true">	   
 	<label class="item item-input">
