--- a/www/templates/resource/list.html
+++ b/www/templates/resource/list.html
@@ -3,7 +3,7 @@
       <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
       <h1 class='title'>Resource</h1>
       <div class="buttons">
-        <button class="button icon-right ion-plus-round" on-tap="$event.stopPropagation(); create()"></button>
+        <button class="button button-clear icon-right ion-plus-round" on-tap="$event.stopPropagation(); create()"></button>
       </div>	
     </ion-nav-buttons>
 	<ion-content>
