--- a/www/templates/reservation/create.html
+++ b/www/templates/reservation/create.html
@@ -1,7 +1,8 @@
 <ion-view>
   <ion-nav-buttons side="left">
+  	<button class="button button-clear icon-left ion-chevron-left" ng-click="$ionicGoBack()"></button>
 	<h1 class="title">Reservation</h1>
-	<button class="button button-clear button-positive" ng-click="save()">OK</button>
+	<button class="button button-clear icon-right ion-checkmark-round" ng-click="save()"></button>
   </ion-nav-buttons>
   <ion-content padding="true">
 	<div class="item item-input" ng-init="item = model.resource; item.label = item.name">
