--- a/www/templates/resource/read.html
+++ b/www/templates/resource/read.html
@@ -1,7 +1,8 @@
 <ion-view>
   <ion-nav-buttons side="left">
+    <button class="button button-clear icon-left ion-chevron-left" ng-click="$ionicGoBack()"></button>
   	<h1 class="title">Resource</h1>
-  	<a class="button button-icon button-clear" ng-href="#/resource/edit/{{ model._id }}">Edit</a>
+  	<a class="button button-clear icon-right ion-edit" ng-href="#/resource/edit/{{ model._id }}"></a>
   </ion-nav-buttons>
   <ion-content padding="true">
 	<label class="item item-input">
