--- a/www/templates/reservation/list.html
+++ b/www/templates/reservation/list.html
@@ -32,8 +32,8 @@
 				<tr ng-repeat="group in resourceList.models | filter: inputFilter">
 					<td class="td-resource"><a href="" ng-click="modalViewResource(group)"><b>{{group.name}}</b></a> <div class="location" ng-bind="group.location"></div></td>
 					<td ng-repeat="item in group.timeslot.models" class="tableItem" ng-class="{'td-reserved': item.reservedBy != ''}">
-						<span ng-if="item.reservedBy" ng-bind="item.reservedBy"></span>
-						<div ng-if="!item.reservedBy"><button class="button button-balanced" ng-click="create(group._id, item.date, item._id)">Reserve</button></div>
+						<span ng-if="item.reservedBy"><a class="button button-clear button-white ion-person" ng-click="modalViewUser(item.reservedBy)"></a></span>
+						<div ng-if="!item.reservedBy"><a class="button button-clear button-balanced ion-person-add" ng-click="create(group._id, item.date, item._id)"></a></div>
 					</td>				
 				</tr>	
 			</table>			
